# yet_essential

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
config/: setting.cfg
src/: core.py  node.py  routes.py
web/: prompt_autocomplete.js  ye_empty_latent_dynamic.js  ye_image_compare.js  ye_model_preview.js  ye_settings.js
web/js/: prompt_autocomplete.js  ye_empty_latent_dynamic.js  ye_model_preview.js
