[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yet_essential"
version = "0.0.1"
description = "A collection of custom nodes for ComfyUI"
authors = [
  {name = "KidiXDev"}
]
readme = "README.md"
license = {text = "Apache Software License 2.0"}
requires-python = ">=3.10"
classifiers = []
dependencies = [

]



[project.optional-dependencies]
dev = [
    "bump-my-version",
    "mypy",  # linting
]

[project.urls]
Repository = "https://github.com/KidiXDev/yet_essential"
BugTracker = "https://github.com/KidiXDev/yet_essential/issues"
Documentation = "https://github.com/KidiXDev/yet_essential/wiki"


[tool.comfy]
PublisherId = "KidiXDev"
DisplayName = "yet-essential"
Icon = ""
Tags = []
Repository = "https://github.com/KidiXDev/yet_essential"
includes = ["src/", "web/"]

[tool.setuptools.package-data]
"*" = ["*.*"]


[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true


